--- a/CarrierApp/templates/index.html
+++ b/CarrierApp/templates/index.html
@@ -34,7 +34,7 @@
    <body class="main-layout">
       <!-- loader  -->
       <div class="loader_bg">
-         <div class="loader"><img src="images/loading.gif" alt="#" /></div>
+         <div class="loader"><img src="{% static 'images/loading.gif' %}" alt="#" /></div>
       </div>
       <!-- end loader --> 
       <!-- header -->
@@ -67,7 +67,7 @@
                <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col logo_section">
                   <div class="full">
                      <div class="center-desk">
-                        <div class="logo"> <a href="index.html"><img src="images/logo.jpg" alt="logo"/></a> </div>
+                        <div class="logo"> <a href="index.html"><img src="{% static 'images/logo.jpg' %}" alt="logo"/></a> </div>
                      </div>
                   </div>
                </div>
@@ -101,7 +101,7 @@
 
             <div class="carousel-inner">
                <div class="carousel-item active">
-                  <img class="first-slide" src="images/banner2.jpg" alt="First slide">
+                  <img class="first-slide" src="{% static 'images/banner2.jpg' %}" alt="First slide">
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Our <br> <strong class="black_bold">Latest </strong><br>
@@ -113,7 +113,7 @@
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="second-slide" src="images/banner2.jpg" alt="Second slide">
+                  <img class="second-slide" src="{% static 'images/banner2.jpg' %}" alt="Second slide">
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Our <br> <strong class="black_bold">Latest </strong><br>
@@ -125,7 +125,7 @@
                   </div>
                </div>
                <div class="carousel-item">
-                  <img class="third-slide" src="images/banner2.jpg" alt="Third slide">
+                  <img class="third-slide" src="{% static 'images/banner2.jpg' %}" alt="Third slide">
                   <div class="container">
                      <div class="carousel-caption relative">
                         <h1>Our <br> <strong class="black_bold">Latest </strong><br>
@@ -365,7 +365,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="{% static 'images/lllll.png' %}"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
                   
                </div>
                 
@@ -379,7 +379,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                 <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="{% static 'images/lllll.png' %}"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
                   
                </div>
                 <p>You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. I am really satisfied with my first laptop service.<br>
@@ -392,7 +392,7 @@
             <div class="container">
               <div class="carousel-caption text-bg">
                  <div class="img_bg">
-                  <i><img src="images/lllll.png"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
+                  <i><img src="{% static 'images/lllll.png' }"/><span>Jone Due<br><strong class="date">12/02/2019</strong></span></i>
                   
                </div>
                 <p>You guys rock! Thank you for making it painless, pleasant and most of all hassle free! I wish I would have thought of it first. I am really satisfied with my first laptop service.<br>
@@ -413,7 +413,7 @@
             <div class="row">
                <div class="col-xl-7 col-lg-7 col-md-7 col-sm-12">
                   <div class="yellow-box">
-                     <h3>REQUEST A FREE QUOTE<i><img src="icon/calll.png"/></i></h3>
+                     <h3>REQUEST A FREE QUOTE<i><img src="{% static 'icon/calll.png' %}"/></i></h3>
                      
                      <p>Get answers and advice from people you want it from.</p>
                   </div>
@@ -432,7 +432,7 @@
       <!-- map -->
       <div class="container-fluid padi">
          <div class="map">
-            <img src="images/mapimg.jpg" alt="img"/>
+            <img src="{% static 'images/mapimg.jpg' %}" alt="img"/>
          </div>
       </div>
       <!-- end map --> 
