--- a/CarrierApp/templates/UserRegistration.html
+++ b/CarrierApp/templates/UserRegistration.html
@@ -135,7 +135,7 @@
                                  </label>
                                </div>
                                <div class="form-check">
-                                 <input class="form-check-input" type="radio" name="is_student" id="flexRadioDefault2" checked>
+                                 <input class="form-check-input" type="radio" name="is_student" value="False" id="flexRadioDefault2" checked>
                                  <label class="form-check-label" for="flexRadioDefault2">
                                    As College
                                  </label>
