--- a/Student/templates/Stud_templates/index.html
+++ b/Student/templates/Stud_templates/index.html
@@ -168,21 +168,21 @@
 					</div>
 					<ul class="nav">
 						<li class="nav-item active">
-							<a href="index.html">
+							<a href="#">
 								<i class="la la-dashboard"></i>
-								<p>Dashboard</p>
-								<span class="badge badge-count">5</span>
+								<p>View Colleges</p>
+								<!-- <span class="badge badge-count">5</span> -->
 							</a>
 						</li>
-						<li class="nav-item">
-							<a href="components.html">
+						<li class="nav-item active">
+							<a href="#">
 								<i class="la la-table"></i>
-								<p>Components</p>
-								<span class="badge badge-count">14</span>
+								<p>Take Aptitiude</p>
+								<!-- <span class="badge badge-count">14</span> -->
 							</a>
 						</li>
-						<li class="nav-item">
-							<a href="forms.html">
+						<li class="nav-item active">
+							<a href="#">
 								<i class="la la-keyboard-o"></i>
 								<p>Forms</p>
 								<span class="badge badge-count">50</span>
@@ -228,7 +228,7 @@
 				<div class="content">
 					<div class="container-fluid">
 						<h4 class="page-title">Dashboard</h4>
-						<div class="row">
+						<!-- <div class="row">
 							<div class="col-md-3">
 								<div class="card card-stats card-warning">
 									<div class="card-body ">
@@ -304,7 +304,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div> -->
 <!-- 							<div class="col-md-3">
 								<div class="card card-stats">
 									<div class="card-body ">
@@ -381,7 +381,7 @@
 									</div>
 								</div>
 							</div> -->
-						</div>
+						<!-- </div>
 						<div class="row">
 							<div class="col-md-3">
 								<div class="card">
@@ -459,8 +459,8 @@
 											<div class="progress mb-2" style="height: 7px;">
 												<div class="progress-bar bg-primary" role="progressbar" style="width: 70%" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" data-toggle="tooltip" data-placement="top" title="70%"></div>
 											</div>
-										</div>
-										<div class="progress-card">
+										</div> -->
+										<!-- <div class="progress-card">
 											<div class="d-flex justify-content-between mb-1">
 												<span class="text-muted">Open Rate</span>
 												<span class="text-muted fw-bold"> 60%</span>
@@ -690,7 +690,7 @@
 										</div>
 									</div>
 								</div>
-							</div>
+							</div>-->
 						</div>
 					</div>
 				</div>
@@ -716,7 +716,7 @@
 							</ul>
 						</nav>
 						<div class="copyright ml-auto">
-							2018, made with <i class="la la-heart heart text-danger"></i> by <a href="http://www.themekita.com">ThemeKita</a>
+							2024, made with <i class="la la-heart heart text-danger"></i> by <a href="http://www.themekita.com">Luminar technolab</a>
 						</div>				
 					</div>
 				</footer>
