--- a/CarrierApp/templates/UserRegistration.html
+++ b/CarrierApp/templates/UserRegistration.html
@@ -142,7 +142,7 @@
                                </div>
                             </div>
                             <div class="col-md-12 mt-3">
-                              <input class="form-control" placeholder="Password" type="password" name="password">
+                              <input class="form-control" placeholder="Password(Required digits and @/./+/-/_ )" type="password" name="password">
                           </div>
                             
                             
