--- a/Student/templates/Stud_templates/CollegeView.html
+++ b/Student/templates/Stud_templates/CollegeView.html
@@ -188,26 +188,26 @@
 				</div>
 				<ul class="nav">
 					<li class="nav-item active">
-						<a href="{% url 'college_view' %}">
+						<a href="#">
 							<i class="la la-dashboard"></i>
 							<p>View Colleges</p>
 							<!-- <span class="badge badge-count">5</span> -->
 						</a>
 					</li>
-					<li class="nav-item active">
+					<!-- <li class="nav-item active">
 						<a href="#">
 							<i class="la la-table"></i>
 							<p>Take Aptitiude</p>
-							<!-- <span class="badge badge-count">14</span> -->
+							<span class="badge badge-count">14</span>
 						</a>
 					</li>
 					<li class="nav-item active">
 						<a href="#">
 							<i class="la la-keyboard-o"></i>
 							<p>View Marks & Colleges</p>
-							<!-- <span class="badge badge-count">50</span> -->
+							<span class="badge badge-count">50</span>
 						</a>
-					</li>
+					</li> -->
 
 					<!-- <li class="nav-item">
 							<a href="tables.html">
@@ -248,7 +248,35 @@
 		<div class="main-panel">
 			<div class="content">
 				<div class="container-fluid">
-					<h4 class="page-title">Dashboard</h4>
+					<h4 class="page-title">Colleges</h4>
+                    <div class="card-body">
+						<table class="table table-head-bg-success table-striped table-hover">
+							<thead>
+								<tr>
+									<th scope="col">College Name</th>
+									<th scope="col">Place</th>
+									<th scope="col">Type</th>
+									<th scope="col">Cutt-Off Mark</th>
+									<th scope="col">Description</th>
+									<th scope="col">Courses</th>
+								</tr>
+							</thead>
+							<tbody>
+								{% for i in data %}
+								<tr>
+									<td>{{i.name}}</td>
+									<td>{{i.place}}</td>
+									<td>{{i.Type}}</td>
+									<td>{{i.cut_off_mark}}</td>
+									<td>{{i.Description}}</td>
+									<td><a class="btn btn-primary" href="{% url 'course_view' i.id %}">View Course</a></td>
+								</tr>
+								
+								{% endfor %}
+								
+							</tbody>
+						</table>
+					</div>
 					<!-- <div class="row">
 						<div class="col-md-3">
 							<div class="card card-stats card-warning">
