--- a/Student/templates/Stud_templates/profileview.html
+++ b/Student/templates/Stud_templates/profileview.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
         <div class="main-header">
             <div class="logo-header">
-                <a href="#" class="logo">
+                <a href="{% url 'Stud_home' %}" class="logo">
                     Student Dashboard
                 </a>
                 <button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -119,7 +119,7 @@
                             <ul class="dropdown-menu dropdown-user">
                                 <li>
                                     <div class="user-box">
-                                        <div class="u-img"><img src="{% static 'assets/img/profile.jpg' %}" alt="user">
+                                        <div class="u-img"><img src="{% static 'assets/img/user.png' %}" alt="user">
                                         </div>
                                         <div class="u-text">
                                             <h4>{{request.user}}</h4>
@@ -170,7 +170,7 @@
                                     </a>
                                 </li>
                                 <li>
-                                    <a href="#">
+                                    <a href="{% url 'Sprofile_edit' request.user.id %}">
                                         <span class="link-collapse">Edit Profile</span>
                                     </a>
                                 </li>
@@ -187,7 +187,7 @@
                 </div>
                 <ul class="nav">
                     <li class="nav-item active">
-                        <a href="#">
+                        <a href="{% url 'college_view' %}">
                             <i class="la la-dashboard"></i>
                             <p>View Colleges</p>
                             <!-- <span class="badge badge-count">5</span> -->
@@ -250,12 +250,14 @@
                     <h4 class="page-title">Dashboard</h4>
                     <div class="card mb-4">
                         <div class="card-body">
+                            {% for i in data %}
                             <div class="row">
+                           
                                 <div class="col-sm-3">
                                     <p class="mb-0">Full Name</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">Johnatan Smith</p>
+                                    <p class="text-muted mb-0">{{i.name}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -264,7 +266,16 @@
                                     <p class="mb-0">Email</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">example@example.com</p>
+                                    <p class="text-muted mb-0">{{i.email}}</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Qualification</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.qualification}}</p>
                                 </div>
                             </div>
                             <hr>
@@ -273,27 +284,47 @@
                                     <p class="mb-0">Phone</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(097) 234-5678</p>
+                                    <p class="text-muted mb-0">{{i.phone}}</p>
+                                </div>
+                            </div>
+                            
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Place</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.place}}</p>
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
                                 <div class="col-sm-3">
-                                    <p class="mb-0">Mobile</p>
+                                    <p class="mb-0">Gender</p>
                                 </div>
                                 <div class="col-sm-9">
-                                    <p class="text-muted mb-0">(098) 765-4321</p>
+                                    <p class="text-muted mb-0">{{i.Gender}}</p>
                                 </div>
                             </div>
                             <hr>
                             <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Age</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.age}}</p>
+                                </div>
+                            </div>
+                            {% endfor %}
+
+                            <!-- <div class="row">
                                 <div class="col-sm-3">
                                     <p class="mb-0">Address</p>
                                 </div>
                                 <div class="col-sm-9">
                                     <p class="text-muted mb-0">Bay Area, San Francisco, CA</p>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <!-- <div class="row">
