--- a/college/templates/college_temp/CollegeProfile.html
+++ b/college/templates/college_temp/CollegeProfile.html
@@ -3,8 +3,9 @@
 <html>
 
 <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-	<title>Student Dashboard</title>
+	<title>College Dashboard</title>
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0, shrink-to-fit=no'
 		name='viewport' />
 	<link rel="stylesheet" href="{% static 'assets/css/bootstrap.min.css' %}">
@@ -18,8 +19,8 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="{% url 'Stud_home' %}" class="logo">
-					Student Dashboard
+				<a href="#" class="logo">
+					College Dashboard
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
 					data-target="collapse" aria-controls="sidebar" aria-expanded="false" aria-label="Toggle navigation">
@@ -114,12 +115,12 @@
 						</li> -->
 						<li class="nav-item dropdown">
 							<a class="dropdown-toggle profile-pic" data-toggle="dropdown" href="#"
-								aria-expanded="false"> <img src="{% static 'assets/img/user.png' %}" alt="user-img"
+								aria-expanded="false"> <img src="{% static 'assets/img/profile2.png' %}" alt="user-img"
 									width="36" class="img-circle"><span>{{request.user}}</span></span> </a>
 							<ul class="dropdown-menu dropdown-user">
 								<li>
 									<div class="user-box">
-										<div class="u-img"><img src="{% static 'assets/img/user.png' %}" alt="user">
+										<div class="u-img"><img src="{% static 'assets/img/profile2.png' %}" alt="user">
 										</div>
 										<div class="u-text">
 											<h4>{{request.user}}</h4>
@@ -149,35 +150,34 @@
 			<div class="scrollbar-inner sidebar-wrapper">
 				<div class="user">
 					<div class="photo">
-						<img src="{% static 'assets/img/user.png' %}">
+						<img src="{% static 'assets/img/profile2.png' %}">
 					</div>
 					<div class="info">
 						<a class="" data-toggle="collapse" href="#collapseExample" aria-expanded="true">
 							<span>
 								{{request.user}}
-								<span class="user-level">Student</span>
+								<span class="user-level">College</span>
 								<span class="caret"></span>
 							</span>
 						</a>
 						<div class="clearfix"></div>
 
 						<div class="collapse in" id="collapseExample" aria-expanded="true">
-							{% if request.user.student_profile %}
+							{% if request.user.college_profile %}
 							<ul class="nav">
-								
 								<li>
-									<a href="{% url 'profile_view' request.user.id %}">
+									<a href="#profile">
 										<span class="link-collapse">My Profile</span>
 									</a>
 								</li>
 								<li>
-									<a href="{% url 'Sprofile_edit' request.user.id %}">
+									<a href="#">
 										<span class="link-collapse">Edit Profile</span>
 									</a>
 								</li>
 								{% else %}
 								<li>
-									<a href="{% url 'Stud_Aprofile' %}">
+									<a href="{% url 'college_ProfileAdd' %}">
 										<span class="link-collapse">Add profile</span>
 									</a>
 								</li>
@@ -188,26 +188,26 @@
 				</div>
 				<ul class="nav">
 					<li class="nav-item active">
-						<a href="{% url 'college_view' %}">
+						<a href="{% url 'course_Add' %}">
 							<i class="la la-dashboard"></i>
-							<p>View Colleges</p>
+							<p>Add Courses</p>
 							<!-- <span class="badge badge-count">5</span> -->
 						</a>
 					</li>
-					<li class="nav-item active">
+					<!-- <li class="nav-item active">
 						<a href="#">
 							<i class="la la-table"></i>
 							<p>Take Aptitiude</p>
-							<!-- <span class="badge badge-count">14</span> -->
+							<span class="badge badge-count">14</span>
 						</a>
-					</li>
-					<li class="nav-item active">
+					</li> -->
+					<!-- <li class="nav-item active">
 						<a href="#">
 							<i class="la la-keyboard-o"></i>
 							<p>View Marks & Colleges</p>
-							<!-- <span class="badge badge-count">50</span> -->
+							<span class="badge badge-count">50</span>
 						</a>
-					</li>
+					</li> -->
 
 					<!-- <li class="nav-item">
 							<a href="tables.html">
@@ -248,7 +248,80 @@
 		<div class="main-panel">
 			<div class="content">
 				<div class="container-fluid">
-					<h4 class="page-title">Dashboard</h4>
+					<h4 class="page-title">College Profile</h4>
+                    <div class="card mb-4">
+                        <div class="card-body">
+                            <div class="row">
+                            {% for i in data %}
+                                <div class="col-sm-3">
+                                    <p class="mb-0">College Name</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.name}}</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Place</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.place}}</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Type</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.Type}}</p>
+                                </div>
+                            </div>
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Description</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.Description}}</p>
+                                </div>
+                            </div>
+                            
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">Cutt-Off Mark</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">{{i.cut_off_mark}}</p>
+                                </div>
+                            </div>
+                            {% endfor %}
+                            <hr>
+                            <div class="row">
+                                <div class="col-sm-3">
+                                   
+                                    <p class="mb-0">Courses:</p>
+                                </div>
+                                <div class="col-sm-9 d-flex ">
+                                    {% for j in course %} 
+                                    <ul class="text-muted mb-0 ms-5">
+                                        <li>{{j.Courses}}<a href="{% url 'Course_delete' j.id %}"><i class="fa-solid fa-trash"></i></a></li>
+                                    </ul>
+                                    {% endfor %}
+                                </div>
+                            </div>
+                            
+                            <hr>
+                            <!-- <div class="row">
+                                <div class="col-sm-3">
+                                    <p class="mb-0">fgh</p>
+                                </div>
+                                <div class="col-sm-9">
+                                    <p class="text-muted mb-0">dfg</p>
+                                </div>
+                            </div> -->
 					<!-- <div class="row">
 						<div class="col-md-3">
 							<div class="card card-stats card-warning">
