--- a/college/templates/college_temp/index.html
+++ b/college/templates/college_temp/index.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="#" class="logo">
+				<a href="{% url 'college_home' %}" class="logo">
 					College Dashboard
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
