--- a/college/templates/college_temp/Add_course.html
+++ b/college/templates/college_temp/Add_course.html
@@ -18,7 +18,7 @@
 	<div class="wrapper">
 		<div class="main-header">
 			<div class="logo-header">
-				<a href="#" class="logo">
+				<a href="{% url 'college_home' %}" class="logo">
 					College Dashboard
 				</a>
 				<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse"
@@ -170,7 +170,7 @@
 									</a>
 								</li>
 								<li>
-									<a href="#">
+									<a href="{% url 'CProfile_edit' request.user.id %}">
 										<span class="link-collapse">Edit Profile</span>
 									</a>
 								</li>
